crates/sbtui/src/view/snapshots/sbtui__view__render_tests__tab-1.snap
---
source: crates/sbtui/src/view/mod.rs
expression: rendered
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站  │  7 覆写                         " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " "), (72, " "), (74, " ")]
"                                                                                                    "
" ┌代理组──────────────────────────┐┌🚀节点选择 节点 · Enter 切换──────────────────────────────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (48, " "), (50, " "), (61, " "), (63, " ")]
" │🚀节点选择 (selector)           ││● 东京-A  [42ms]                                              │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (39, " "), (41, " ")]
" │♻️自动选择 (urltest)            ││○ 洛杉矶-B  [超时]                                            │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (39, " "), (41, " "), (43, " "), (50, " "), (52, " ")]
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" │                                ││                                                              │ "
" └────────────────────────────────┘└──────────────────────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  ↑↓ 选节点  ·  ←→ 切组  ·  Enter 切换  ·  t 测当前  ·  T 测全组 " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (41, " "), (43, " "), (45, " "), (55, " "), (57, " "), (70, " "), (72, " "), (81, " "), (83, " "), (85, " "), (94, " "), (96, " "), (98, " ")]
"                                                                                                    "
"                                                                                                    "
