crates/sbtui/src/view/snapshots/sbtui__view__render_tests__tab-2.snap
---
source: crates/sbtui/src/view/mod.rs
expression: rendered
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站                                    " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " ")]
"                                                                                                    "
" ┌活动连接 · 下载 · 2 条──────────────────────────────────────────────────────────────────────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (23, " ")]
" │   目标                主机               网络   规则         链路           上传      下载     │ " Hidden by multi-width symbols: [(6, " "), (8, " "), (26, " "), (28, " "), (45, " "), (47, " "), (52, " "), (54, " "), (65, " "), (67, " "), (80, " "), (82, " "), (90, " "), (92, " ")]
" │●  :                                             ip_is_privat -              4.0 KiB   192.0 KiB│ "
" │   :                                             MATCH        🚀节点选择 →   1.0 KiB   80.0 KiB │ " Hidden by multi-width symbols: [(65, " "), (67, " "), (69, " "), (71, " "), (73, " ")]
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  ↑↓ 选择  ·  x 关闭连接  ·  X 关闭全部  ·  S 排序  ·  / 过滤  │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (41, " "), (43, " "), (52, " "), (54, " "), (56, " "), (58, " "), (67, " "), (69, " "), (71, " "), (73, " "), (82, " "), (84, " "), (93, " "), (95, " ")]
"                                                                                                    "
"                                                                                                    "
