crates/sbtui/src/view/snapshots/sbtui__view__render_tests__tab-4-macos.snap
---
source: crates/sbtui/src/view/mod.rs
expression: rendered
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站  │  7 覆写                         " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " "), (72, " "), (74, " ")]
"                                                                                                    "
" ┌订阅档案 · Enter 激活────────────────┐┌运行环境─────────────────────────────────────────────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (20, " "), (22, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
" │                                     ││内核: <DATA_DIR>/core/sing-box                           │ " Hidden by multi-width symbols: [(42, " "), (44, " ")]
" │                                     ││版本: sing-box 1.14.1   镜像: 直连                       │ " Hidden by multi-width symbols: [(42, " "), (44, " "), (66, " "), (68, " "), (72, " "), (74, " ")]
" │                                     ││运行版本: 1.14.1   内存: 32.0 MiB                        │ " Hidden by multi-width symbols: [(42, " "), (44, " "), (46, " "), (48, " "), (61, " "), (63, " ")]
" │                                     ││模式: TUN   混合端口: 0   延迟地址:                      │ " Hidden by multi-width symbols: [(42, " "), (44, " "), (54, " "), (56, " "), (58, " "), (60, " "), (68, " "), (70, " "), (72, " "), (74, " ")]
" │                                     ││自动更新: 关   启动内核: 关   自动系统代理: 关           │ " Hidden by multi-width symbols: [(42, " "), (44, " "), (46, " "), (48, " "), (52, " "), (57, " "), (59, " "), (61, " "), (63, " "), (67, " "), (72, " "), (74, " "), (76, " "), (78, " "), (80, " "), (82, " "), (86, " ")]
" │                                     ││系统代理后端: macOS networksetup   订阅用量: 用量信息待更│ " Hidden by multi-width symbols: [(42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (77, " "), (79, " "), (81, " "), (83, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " "), (97, " ")]
" │                                     ││                                                         │ "
" │                                     ││档案: n 新增 ｜ f 本地文件 ｜ e 改链接 ｜ Delete 删除 ｜ │ " Hidden by multi-width symbols: [(42, " "), (44, " "), (50, " "), (52, " "), (55, " "), (60, " "), (62, " "), (64, " "), (66, " "), (69, " "), (74, " "), (76, " "), (78, " "), (81, " "), (91, " "), (93, " "), (96, " ")]
" │                                     ││内核: v 改版本 ｜ r 改镜像 ｜ d 下载 ｜ u 更新订阅       │ " Hidden by multi-width symbols: [(42, " "), (44, " "), (50, " "), (52, " "), (54, " "), (57, " "), (62, " "), (64, " "), (66, " "), (69, " "), (74, " "), (76, " "), (79, " "), (84, " "), (86, " "), (88, " "), (90, " ")]
" │                                     ││选项: a 自动更新 ｜ P 混合端口 ｜ U 延迟地址 ｜ g 启动内 │ " Hidden by multi-width symbols: [(42, " "), (44, " "), (50, " "), (52, " "), (54, " "), (56, " "), (59, " "), (64, " "), (66, " "), (68, " "), (70, " "), (73, " "), (78, " "), (80, " "), (82, " "), (84, " "), (87, " "), (92, " "), (94, " "), (96, " ")]
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" │                                     ││                                                         │ "
" └─────────────────────────────────────┘└─────────────────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  n 新增  ·  e 编辑  ·  Delete 删除  ·  d 下载内核  ·  a/P/U 选  " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (40, " "), (42, " "), (51, " "), (53, " "), (67, " "), (69, " "), (78, " "), (80, " "), (82, " "), (84, " "), (97, " ")]
"                                                                                                    "
"                                                                                                    "
