crates/sbtui/src/view/snapshots/sbtui__view__render_tests__tab-6.snap
---
source: crates/sbtui/src/view/mod.rs
expression: rendered
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站  │  7 覆写                         " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " "), (72, " "), (74, " ")]
"                                                                                                    "
" ┌配置覆写 · 无覆写文件────────────────────────────┐┌生效配置 · 已脱敏 / redacted · 只读──────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (54, " "), (56, " "), (58, " "), (60, " "), (65, " "), (67, " "), (69, " "), (85, " "), (87, " ")]
" │档案  （尚无档案：先导入订阅）                   ││已脱敏 / redacted：密钥与订阅凭据不在此显示  │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (54, " "), (56, " "), (58, " "), (71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " ")]
" │覆写  无覆写文件（数据目录的 overrides/          ││来源  运行中内核的配置（active-config.json） │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (54, " "), (56, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (96, " ")]
" │下没有本档案的 JSON）                            ││                                             │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (22, " ")]
" │内核只用订阅原文，加上客户端自己写回的保留字段。 ││/dns/final: dns-out                          │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " ")]
" │本页只读、不编辑 JSON：外部写好的文件按 f        ││/dns/servers: 2 项                           │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (70, " ")]
" │装载，也可直接改数据目录 overrides/ 下的文件。   ││/dns/tag: dns-in                             │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " ")]
" │                                                 ││/experimental/clash_api/external_controller:…│ "
" │                                                 ││/experimental/clash_api/secret: [已脱敏]     │ " Hidden by multi-width symbols: [(87, " "), (89, " "), (91, " ")]
" │                                                 ││/inbounds: 2 项                              │ " Hidden by multi-width symbols: [(67, " ")]
" │                                                 ││/log/level: info                             │ "
" │                                                 ││/log/timestamp: true                         │ "
" │                                                 ││/outbounds: 2 项                             │ " Hidden by multi-width symbols: [(68, " ")]
" │                                                 ││/route/auto_detect_interface: true           │ "
" │                                                 ││/route/final: 🚀节点选择                     │ " Hidden by multi-width symbols: [(68, " "), (70, " "), (72, " "), (74, " "), (76, " ")]
" │                                                 ││/route/object_cache_url: https://sbctl.test/…│ "
" │                                                 ││/route/rule_set: 1 项                        │ " Hidden by multi-width symbols: [(73, " ")]
" │                                                 ││/route/rules: 9 条                           │ " Hidden by multi-width symbols: [(70, " ")]
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" └─────────────────────────────────────────────────┘└─────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  只读  ·  ↑↓/Enter 开关片段  ·  f 装载覆写  ·  O 删覆写  │  Tab " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (38, " "), (40, " "), (56, " "), (58, " "), (60, " "), (62, " "), (71, " "), (73, " "), (75, " "), (77, " "), (86, " "), (88, " "), (90, " ")]
"                                                                                                    "
"                                                                                                    "
